[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/multicolor_pitch.png" type="Texture" id=1]
[ext_resource path="res://UI/Buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Sprites/blue_idle.png" type="Texture" id=3]
[ext_resource path="res://UI/Player Select Menu/PlayerSelectMenu.gd" type="Script" id=4]
[ext_resource path="res://Players/blue_player_stats.tres" type="Resource" id=5]
[ext_resource path="res://Players/red_player_stats.tres" type="Resource" id=6]
[ext_resource path="res://Players/green_player_stats.tres" type="Resource" id=7]
[ext_resource path="res://Fonts/UI_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://Art/red_pitch.tres" type="Resource" id=9]
[ext_resource path="res://Art/blue_pitch.tres" type="Resource" id=10]
[ext_resource path="res://Art/multicolor_pitch.tres" type="Resource" id=11]

[sub_resource type="Theme" id=1]

[node name="PlayerSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
selectablePlayers = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
selectablePitches = [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ) ]

[node name="SelectionMenuPopup" type="PopupPanel" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionMenuContainer" type="VBoxContainer" parent="SelectionMenuPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top Margin" type="MarginContainer" parent="SelectionMenuPopup/SelectionMenuContainer"]
margin_right = 349.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="SelectionMenuPopup/SelectionMenuContainer"]
margin_top = 9.0
margin_right = 349.0
margin_bottom = 49.0
custom_constants/margin_left = 125

[node name="TopRowContainer" type="HBoxContainer" parent="SelectionMenuPopup/SelectionMenuContainer/MarginContainer3"]
margin_left = 125.0
margin_right = 349.0
margin_bottom = 40.0

[node name="FieldImage" type="TextureRect" parent="SelectionMenuPopup/SelectionMenuContainer/MarginContainer3/TopRowContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
theme = SubResource( 1 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="CloseButton" type="Button" parent="SelectionMenuPopup/SelectionMenuContainer/MarginContainer3/TopRowContainer"]
margin_left = 104.0
margin_top = 13.0
margin_right = 145.0
margin_bottom = 27.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PitchSelect" parent="SelectionMenuPopup/SelectionMenuContainer" instance=ExtResource( 2 )]
margin_left = 138.0
margin_top = 53.0
margin_right = 211.0
margin_bottom = 67.0
buttonName = "Select Pitch"

[node name="Plus" parent="SelectionMenuPopup/SelectionMenuContainer/PitchSelect" index="2"]
margin_left = 56.0
margin_right = 73.0

[node name="PlayersContainer" type="VBoxContainer" parent="SelectionMenuPopup/SelectionMenuContainer"]
margin_top = 71.0
margin_right = 349.0
margin_bottom = 175.0

[node name="CenterFieldSprite" type="TextureRect" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer"]
margin_right = 349.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="CenterFieldSelect" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer" instance=ExtResource( 2 )]
margin_left = 138.0
margin_top = 36.0
margin_right = 211.0
margin_bottom = 50.0
buttonName = "Center Fielder"

[node name="Plus" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/CenterFieldSelect" index="2"]
margin_left = 56.0
margin_right = 73.0

[node name="VBoxContainer" type="HBoxContainer" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer"]
margin_top = 54.0
margin_right = 349.0
margin_bottom = 104.0
alignment = 1

[node name="LeftField" type="VBoxContainer" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer"]
margin_left = 77.0
margin_right = 170.0
margin_bottom = 50.0

[node name="LeftFieldSprite" type="TextureRect" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/LeftField"]
margin_right = 93.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 32 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="LeftFieldSelect" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/LeftField" instance=ExtResource( 2 )]
margin_top = 36.0
margin_right = 93.0
margin_bottom = 50.0
buttonName = "Left Wing"

[node name="Label" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/LeftField/LeftFieldSelect" index="1"]
margin_right = 72.0
text = "Left Wing"

[node name="Plus" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/LeftField/LeftFieldSelect" index="2"]
margin_left = 76.0
margin_right = 93.0

[node name="RightField" type="VBoxContainer" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer"]
margin_left = 174.0
margin_right = 272.0
margin_bottom = 50.0

[node name="RightFieldSprite" type="TextureRect" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/RightField"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 32 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="RightFieldSelect" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/RightField" instance=ExtResource( 2 )]
margin_top = 36.0
margin_right = 98.0
margin_bottom = 50.0
buttonName = "Right Wing"

[node name="Label" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/RightField/RightFieldSelect" index="1"]
margin_right = 77.0
text = "Right Wing"

[node name="Plus" parent="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/RightField/RightFieldSelect" index="2"]
margin_left = 81.0
margin_right = 98.0

[connection signal="pressed" from="SelectionMenuPopup/SelectionMenuContainer/MarginContainer3/TopRowContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="change" from="SelectionMenuPopup/SelectionMenuContainer/PitchSelect" to="." method="_on_PitchSelect_change"]
[connection signal="change" from="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/CenterFieldSelect" to="." method="_on_CenterFieldSelect_change"]
[connection signal="change" from="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/LeftField/LeftFieldSelect" to="." method="_on_LeftFieldSelect_change"]
[connection signal="change" from="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/RightField/RightFieldSelect" to="." method="_on_RightFieldSelect_change"]

[editable path="SelectionMenuPopup/SelectionMenuContainer/PitchSelect"]
[editable path="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/CenterFieldSelect"]
[editable path="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/LeftField/LeftFieldSelect"]
[editable path="SelectionMenuPopup/SelectionMenuContainer/PlayersContainer/VBoxContainer/RightField/RightFieldSelect"]
